flight price calc
